[metadata]
license      = MIT License
license_file = LICENSE.rst
platforms    = any
description  = Open-source Insteon library running on Python 3.
long_description = file: DESCRIPTION.rst
keywords     = home, automation, insteon
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Home Automation

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build,tests,topics,samples,./pyinsteon/device_types/__init__.py
doctests = True
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
